force-app/main/default/objects/breg_Notification__c/breg_Notification__c.object-meta.xml
<CustomObject>
    <description>Allta BREG-972</description>
    <label>Notification</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>