force-app/main/default/objects/breg_Notification__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-972</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>breg_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>