force-app/main/default/objects/breg_Notification__c/fields/breg_Contact__c.field-meta.xml
<CustomField>
    <fullName>breg_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-972</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>breg_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>