force-app/main/default/objects/breg_Notification__c/fields/breg_Fee__c.field-meta.xml
<CustomField>
    <fullName>breg_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-972</description>
    <label>Fee</label>
    <referenceTo>breg_Fee__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>breg_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>