force-app/main/default/objects/breg_Notification__c/fields/breg_Free_Of_Charge__c.field-meta.xml
<CustomField>
    <fullName>breg_Free_Of_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-972</description>
    <label>Free Of Charge</label>
    <type>Checkbox</type>
</CustomField>