force-app/main/default/objects/breg_Notification__c/fields/breg_Is_Email__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Aalta BREG-972</description>
    <label>Is Email</label>
    <type>Checkbox</type>
</CustomField>