force-app/main/default/objects/breg_Notification__c/fields/breg_Is_SMS__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-972</description>
    <label>Is SMS</label>
    <type>Checkbox</type>
</CustomField>