force-app/main/default/objects/breg_Notification__c/fields/breg_Notification_Category__c.field-meta.xml
<CustomField>
    <fullName>breg_Notification_Category__c</fullName>
    <description>Aalta BREG-972</description>
    <label>Notification Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trade Name, Trademark, Service Mark Reminder</fullName>
            </value>
            <value>
                <fullName>Publicity Rights Name Renewal Reminder</fullName>
            </value>
            <value>
                <fullName>Annual Report Reminder</fullName>
            </value>
            <value>
                <fullName>My Business Alerts</fullName>
            </value>
            <value>
                <fullName>Entity List Builder Email</fullName>
            </value>
            <value>
                <fullName>Subscriber Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>