force-app/main/default/objects/breg_Notification__c/fields/breg_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>breg_Recipient_Email__c</fullName>
    <description>Aalta BREG-167</description>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>