force-app/main/default/objects/breg_Notification__c/fields/breg_TN_TM_SM__c.field-meta.xml
<CustomField>
    <fullName>breg_TN_TM_SM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-972</description>
    <label>TN/TM/SM</label>
    <referenceTo>breg_TN_TM_SM__c</referenceTo>
    <relationshipLabel>Notifications</relationshipLabel>
    <relationshipName>breg_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>