force-app/main/default/objects/breg_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>breg_Account__c</columns>
    <columns>breg_Contact__c</columns>
    <columns>breg_Notification_Category__c</columns>
    <columns>breg_TN_TM_SM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>